--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="15dp"
     android:orientation="vertical"
-    tools:context="com.example.no0ne.ears.LoginActivity">
+    tools:context="com.example.no0ne.ears.LogInActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
         android:hint="email" />
 
     <EditText
-        android:id="@+id/edit_text_pass"
+        android:id="@+id/edit_text_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
